# snake3d

./: .gitignore  CMakeLists.txt  Material.material  README.md  plugins.cfg  resources.cfg  snake3d.kdev4
.kdev4/: snake3d.kdev4
lib/: CMakeLists.txt
lib/pujOgre/: Apple.cxx  Apple.h  Application.cxx  Application.h  Level.cxx  Level.h  Obstacle.cxx  Obstacle.h  Player.cxx  Player.h  Snake.cxx  Snake.h  SnakeBone.cxx  SnakeBone.h
resources/: apple.blend  apple.mesh  apple.mesh.xml  apple.scene  body.blend  head.blend  materials.material  snake_body.mesh  snake_head.blend  snake_head.mesh  snake_head.mesh.xml  snake_tail.mesh  tail.blend
src/: CMakeLists.txt  snake3d.cxx
